Refactor how questions are displayed
Currently each question is assigned a "number", which is then used to work out which question to ask next. As well as being a bit wordy, this was causing issues when additional questions were needed to be answered.

This refactor instead gives each question a boolean "answered" field (indicating whether an answer has been submitted/evaluated). The frontend then presents the user with all unanswered questions, showing each sequentially.

This eliminates the need for the "number" property and allows much more flexibility of how questions can be asked and answered.

I considered recording the actual answer rather than a boolean, but felt this was inappropriate as it contains personal information. Instead, actual answers are only persisted in the browser requests and the external API.

Fixes ID-345 #patch
